# vrouter-plugins

./: .gitignore  .testr.conf  MANIFEST.in  README.rst  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
networking_brocade/vyatta/: vpn_fw_agent.py
networking_brocade/vyatta/common/: config.py  exceptions.py  l3_agent.py
networking_brocade/vyatta/fw/: config.py
networking_brocade/vyatta/tests/: test_vrouter_neutron_plugin.py
networking_brocade/vyatta/vrouter/: client.py  driver.py  neutron_plugin.py
vyatta/common/: config.py  exceptions.py  globals.py  l3_agent.py  parsers.py  utils.py  vrouter_config.py
vyatta/tests/: test_vrouter_driver.py  test_vrouter_neutron_plugin.py
vyatta/vpn/: config.py
vyatta/vrouter/: client.py  driver.py  neutron_plugin.py
