[metadata]
name = brocade-plugins
packages =
    vyatta
version = 2015.1
description = Brocade Vyatta L3 router Neutron plugin
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://www.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[files]
packages =
    vyatta

[global]
setup-hooks =
    pbr.hooks.setup_hook
