[metadata]
name = brocade-plugins
packages =
    vyatta
version = 2015.1
license = Apache-2
summary = Brocade Vyatta L3 router Neutron plugin
description = Brocade Vyatta L3 router Neutron plugin
description-file =
    README.rst
author = Brocade
author-email = natarajk@brocade.com
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[files]
packages =
    networking_brocade

[global]
setup-hooks =
    pbr.hooks.setup_hook

[entry_points]
console_scripts =
    vyatta-fake-agent = networking_brocade.vyatta.common.l3_agent:main
    vyatta-vpn-fw-agent = networking_brocade.vyatta.vpn_fw_agent:main